# sip

./: .gitignore  .pre-commit-config.yaml  BUILD_SUCCESS.md  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.txt  Makefile  Makefile.am  PCM_WRITE_FIX_SUMMARY.md  PRODUCTION_READY.md  README.md  ast_config.h  at_command.c  at_response.c  at_response.h  chan_dongle.c  chan_dongle.h  channel.c  config.h  configure  configure.ac  fix_headers.h  pdiscovery.c  preinclude.h
.github/workflows/: ci.yml  static-analysis.yml
tests/: Makefile  Makefile.am  test_at_parse
